--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,6 +461,15 @@ header {
 .topbar-header .container .row img {
 	float: right;
 }
+.owl-carousel .owl-item img {
+	height: 392px;
+}
+.book-site{
+	padding: 0 3rem;
+}
+.card-body{
+	text-align: end;
+}
 
 @media(max-width:991px) {
 
